2007-01-09  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-disc.c: (canonicalize_filename),
	(totem_resolve_symlink), (cd_cache_get_dev_from_volumes),
	(cd_cache_get_dev_from_drives), (cd_cache_new):
	Don't use realpath(), to avoid crashes on NetBSD
	(Closes: #394505)

2007-01-05  Bastien Nocera  <hadess@hadess.net>

        * data/mime-type-list.txt: Add a bunch of missing
	mime-types (Closes: #361043)

2007-01-05  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_handle_element_message):
	  Handle "progress" message that qtdemux >= 0.10.4 posts instead of
	  a buffering message (Closes: #392898).

2006-12-18  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (parse_xspf_track): Don't crash
	if there's no URL found in the XSPF track entry (Closes: #386089)

2006-12-16  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_open_with_subtitle),
	(bacon_video_widget_is_seekable):
	  Use SEEKING query to query seekability instead of second-guessing
	  based on whether we have a duration or not (Closes: #365414).
	  Needs decoder/demuxer support.

2006-12-14  Bastien Nocera  <hadess@hadess.net>

	* src/ev-sidebar.h: Fix typo, thanks uws

2006-12-11  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c: (cb_gconf):
	  Fix copy'n'pasto and update the buffer-size when the buffer-size key
	  is changed, not the buffering threshold. (Closes: #382350)

2006-12-11  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_new):
	  Fix nonsensical code; don't overwrite speaker setup preferences
	  saved in gconf with default values when run in metadata or
	  capture mode. (Closes: #379740)

2006-12-11  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: make the Eject button default to insensitive
	(Closes: #384736)
