@@ -1,3 +1,9 @@
+2007-01-10  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* src/backend/bacon-video-widget-gst-0.10.c:
+	(bacon_video_widget_new):
+	  Use BVW_ERROR_AUDIO_PLUGIN error for audio plugins, not VIDEO.
+
 2007-01-09  Bastien Nocera  <hadess@hadess.net>
 
 	* src/plparse/totem-disc.c: (canonicalize_filename),
